--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,6 +2,9 @@ project:
   type: website
   resources:
     - CNAME
+#     
+# bibliography: assets/files/bib/references.bib
+# csl: assets/files/bib/chicago-author-date.csl
 
 website:
   cookie-consent:
@@ -77,4 +80,4 @@ execute:
   error: false
   freeze: auto
 
-include-in-header: assets/umami.html
+# include-in-header: assets/umami.html
