--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,7 +14,7 @@ website:
   google-analytics:
     tracking-id: "G-6C0FRWPTTF"
     anonymize-ip: true
-  title: "*p(coffee) < 0.05*"
+  title: "Risk Taker!"
   site-url: https://hcostax.com
   description: "Quant Risk Management (Finance)"
   favicon: assets/img/favicon/logo.png
