--- a/blog/_metadata.yml
+++ b/blog/_metadata.yml
@@ -7,7 +7,7 @@ title-block-banner: "#FFFFFF"
 title-block-style: plain
 
 # Enable CC licence appendix
-license: "CC BY-SA"
+license: "CC BY 4.0"
 
 # Default for table of contents
 toc: true
